Updates from Overleaf

--- a/Bibs/proposal.bib
+++ b/Bibs/proposal.bib
@@ -14,6 +14,14 @@
   year={2015}
 }
 
+@article{Song2015,
+  title={Efficient Robust Conditional Random Fields},
+  author={Song, Dongjin and Liu, Wei and Zhou, Tianyi and Tao, Dacheng and Meyer, David A.},
+  journal={IEEE Transactions on Image Processing (T-IP)},
+  pages={3124--3136},
+  year={2015}
+}
+
 @article{SDT,
   title={Distilling a Neural Network Into a Soft Decision Tree},
   author={Frosst, Nicholas and Hinton, Geoffrey},
