--- a/Bibs/fin.bib
+++ b/Bibs/fin.bib
@@ -285,7 +285,7 @@
 @inproceedings{you2018graphrnn,
   title={Graphrnn: Generating realistic graphs with deep auto-regressive models},
   author={You, Jiaxuan and Ying, Rex and Ren, Xiang and Hamilton, William and Leskovec, Jure},
-  booktitle={International Conference on Machine Learning},
+  booktitle={ICML},
   pages={5694--5703},
   year={2018}
 }
