--- a/Bibs/thesis.bib
+++ b/Bibs/thesis.bib
@@ -53,7 +53,7 @@
 @inproceedings{yu2009learning,
   title={Learning structural SVMs with latent variables},
   author={Yu, Chun-Nam John and Joachims, Thorsten},
-  booktitle={Proceedings of the 26th Annual International Conference on Machine Learning},
+  booktitle={ICML},
   pages={1169--1176},
   year={2009},
   organization={ACM}
@@ -94,7 +94,7 @@
 @article{yuille2002concave,
 	title={The concave-convex procedure (CCCP)},
 	author={Yuille, Alan L and Rangarajan, Anand and Yuille, AL},
-	journal={Advances in neural information processing systems},
+	journal={NIPS},
 	volume={2},
 	pages={1033--1040},
 	year={2002},
