Updates from Overleaf

--- a/mmpl_mrf_chli.tex
+++ b/mmpl_mrf_chli.tex
@@ -712,7 +712,7 @@ as the minimum over a set of $K$ linear functions as:
   \label{eqn:potential2}
 \end{align}
 %
-where $W_{\!c}(\by_c) = \sum_{i \in c} w_i y_i$ with $w^c_i \geq
+where $W_{\!c}(\by_c) = \sum_{i \in c} w_i^c y_i$ with $w^c_i \geq
 0$ and $\sum_{i \in c} w^c_i = 1$ which are weights for each
 clique. $(a_k, b_k) \in \reals^2$ are the linear function
 parameters. We illustrate an example with
