Updates from Overleaf

--- a/Bibs/proposal.bib
+++ b/Bibs/proposal.bib
@@ -46,7 +46,7 @@
 @article{qin2017dual,
   title={A Dual-Stage Attention-Based Recurrent Neural Network for Time Series Prediction},
   author={Qin, Yao and Song, Dongjin and Cheng, Haifeng and Cheng, Wei and Jiang, Guofei and Cottrell, Garrison},
-  journal={arXiv preprint arXiv:1704.02971},
+  journal={IJCAI},
   year={2017}
 }
 
